--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,6 +3,14 @@
 			<li><a [routerLink]="['/home']" [routerLinkActive]="['active']" >Home</a>
 			</li>
 		</ul>
+		<ul class="rw1">
+			<li><a  >Page1</a>
+			</li>
+		</ul>
+		<ul class="rw1">
+			<li><a  >Page2</a>
+			</li>
+		</ul>
 		<ul class="rw2">
 			<li><a [routerLink]="['/']"  >SignOut</a></li>
 		</ul>
